--- a/style.css
+++ b/style.css
@@ -13,29 +13,41 @@ body{
 }
 
 header{
-    margin-left: 231px;
+    width: 940px;
     padding: 30px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    display: grid;
+    grid-template-columns: 1fr 10fr;
 }
 
+.logo a img {
+    width: 90.6px;
+    height: 26.9px;
+}
 
-.links {
-    text-align: left;
+.links{
+    margin-left: 92.4px;
 }
 
 .links a {
-    color: black;
-    font-size: 18px;
-    line-height: 28px;
-    margin: 0 16px;
-    padding-bottom: 3px;
+    color: #111111;
+    font-size: 16px;
     text-decoration: none;
+    margin-left: 30px;
 }
 
 #wrapper {
-    margin: 0px 230px ;
-    padding: 32px 32px 0px 32px;
-    background-color: #FBDFDB;
+    text-align: center;
+    width: 940px;
+    height: 366px;
     border-radius: 30px;
+    opacity: 100%;
+    background-color: #FBDFDB;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
 #wrapper {
     display: grid;
@@ -43,15 +55,186 @@ header{
 }
 
 #wrapper .info h1 {
-    margin-top: 117px;
-    font-size: 42px;
+    color: #111111;
+    font-size: 32px;    
     line-height: 52px;
     font-weight: bold;
+    text-align: left;
+    margin: 117px 60px 0% ;
 }
 
+#wrapper .info p {
+    color: #000000;
+    font-size: 18px;
+    height: 84px;
+    margin: 0 60px;
+    text-align: left;
+}
 
 #wrapper img {
+    text-align: center;
     margin-bottom: 0px;
     height: 300px;
+    position: relative;
+    left: 154px;
+    top: 66px;
     
 }
+ /* ===================== MAIS ACESSADOS ===================== */
+.title-access {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    width: 940px;;
+    height: 28px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.title-access h2{
+    color: #111111;
+    font-size: 24px;
+}
+
+.mais_acessados{
+    max-width: 940px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+.card_image-container img{
+    width: 100%;
+    border-radius: 15px;
+}
+.card_content{
+    padding-top: 20px;
+    font-size: 18px;
+    color: #111111;
+}
+
+.card_info{
+    padding-top: 5px;
+    color: #777777;
+    font-size: 14px;
+}
+
+/* ===================== FOOTER ======================== */
+
+.footer{
+    margin-top: 50px;
+    height: 62px;
+    background-color: #eeeeee;
+    font-size: 14px;
+    color: #999999;
+    text-align: center;
+}
+.footer p {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+
+/* ===================== SOBRE ======================== */
+
+.title{
+    width: 940px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.title h2{
+    color: #111111;
+    font-size: 24px;
+}
+
+.content {
+    width: 940px;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.content h3{
+    font-size: 20px;
+    padding-top: 30px;
+}
+
+.content p{
+    font-size: 18px;
+    color: #444444;
+    padding-top: 20px;
+}
+
+/* ===================== RECEITAS ======================== */
+/* MODAL*/
+
+.modal-overlay{
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal {
+    background-color: white;
+    width: 660px;
+    height: 413px;
+    margin: 25vh auto;
+    position: relative;
+    border-radius: 16px;
+}
+
+
+.modal .close-modal{
+    color: #999999;
+    position: absolute;
+    right: 50%;
+    top: 364px;
+    transform: translateX(50%);
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* MODAL ACTIVE */
+.modal-overlay.active{
+    opacity: 1;
+    visibility: visible;
+    text-align: center;
+}
+
+.modal-overlay.active .image_container_modal img{
+    position: relative;
+    top: 30px;
+    width: 600px;
+    height: 200px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+}
+
+.modal-overlay.active .title_modal p{
+    position: relative;
+    top: 20px;
+    font-size: 24px;
+    color: #111111;
+}
+.modal-overlay.active .info_modal p{
+    position: relative;
+    top: 25px;
+    font-size: 18px;
+    color: #777777;
+}
+
+
+iframe {
+    width: 100%;
+    height: 80%;
+    position: absolute;
+    top: 5%;
+
+}
+
