feature: Implementação da Pagina de Receita/ Css

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -25,9 +25,11 @@
         </header>
 
         {% block content %} {% endblock %}
-
+        <div class="footer">
+            <p>Todos direitos reservados, receitas Foodfy</p>
+        </div>
+        
     </body>
-
 
 </html>
 
