--- a/public/style.css
+++ b/public/style.css
@@ -104,7 +104,9 @@ header{
     gap: 20px;
 }
 .card_image-container img{
-    width: 100%;
+    /* width: 100%; */
+    height: 140px;
+    width: 300px;
     border-radius: 15px;
 }
 .card_content{
@@ -235,6 +237,62 @@ iframe {
     height: 80%;
     position: absolute;
     top: 5%;
-
 }
 
+/* ===================== RECIPES ======================== */
+
+.recipes{
+    max-width: 940px;
+    margin: 0 auto;
+    gap: 20px;
+}
+
+.recipes .card_image-container img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+}
+
+.recipes .card_content p{
+    padding-top: 50px;
+    font-weight: bold;
+    font-size: 36px;
+    color: #111111;
+    text-align: center;
+}
+.recipes .card_info p{
+    padding-top: 4px;
+    color: #777777;
+    text-align: center;
+    font-size: 20px;
+}
+.recipes .card_ingredients .title{
+    display: grid;
+    grid-template-columns: 0.245fr 1.245fr;
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+.recipes .card_ingredients .title a {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #999999;
+    padding-top: 10px;
+}
+
+.recipes .card_preparation h2{
+    padding-top: 39px;
+    padding-bottom: 20px;
+}
+
+.recipes .card_information h2{
+    padding-top: 39px;
+    padding-bottom: 20px;
+}
+
+.recipes li, p{
+    font-size: 18px;
+    color: #444444;
+    line-height: 28px;
+    text-align: justify;
+}
