feature: Implementação de Accordion / Css

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -19,8 +19,8 @@
                 </a>
             </div>
             <div class="links">
-                <a href="/sobre">Sobre</a>
-                <a href="/receitas">Receitas</a>
+                <a class="sobre" href="/sobre">Sobre</a>
+                <a class="receitas" href="/receitas">Receitas</a>
             </div>
         </header>
 
