--- a/public/style.css
+++ b/public/style.css
@@ -272,22 +272,27 @@ iframe {
     padding-top: 50px;
     padding-bottom: 20px;
 }
-.recipes .card_ingredients .title a {
+
+.recipes .card_preparation .title{
+    display: grid;
+    grid-template-columns: 0.55fr 2fr;
+    padding-top: 39px;
+    padding-bottom: 20px;
+}
+
+.recipes .card_information .title{
+    display: grid;
+    grid-template-columns: 0.80fr 2fr;
+    padding-top: 39px;
+    padding-bottom: 20px;
+}
+
+.recipes .title a {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
     color: #999999;
     padding-top: 10px;
-}
-
-.recipes .card_preparation h2{
-    padding-top: 39px;
-    padding-bottom: 20px;
-}
-
-.recipes .card_information h2{
-    padding-top: 39px;
-    padding-bottom: 20px;
 }
 
 .recipes li, p{
@@ -296,3 +301,7 @@ iframe {
     line-height: 28px;
     text-align: justify;
 }
+.recipes .content_accordion.hide{
+    display: none;
+}
+
