--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,9 @@ header{
     text-decoration: none;
     margin-left: 30px;
 }
+.links .active {
+    font-weight: bold;
+}
 
 #wrapper {
     text-align: center;
@@ -125,6 +128,8 @@ header{
 
 .footer{
     margin-top: 50px;
+    /*margin-top: auto;
+    width: 100%;*/
     height: 62px;
     background-color: #eeeeee;
     font-size: 14px;
@@ -247,40 +252,40 @@ iframe {
     gap: 20px;
 }
 
-.recipes .card_image-container img{
+.recipes .image-container img{
     width: 100%;
     height: 100%;
     border-radius: 15px;
 }
 
-.recipes .card_content p{
+.recipes .content p{
     padding-top: 50px;
     font-weight: bold;
     font-size: 36px;
     color: #111111;
     text-align: center;
 }
-.recipes .card_info p{
+.recipes .info p{
     padding-top: 4px;
     color: #777777;
     text-align: center;
     font-size: 20px;
 }
-.recipes .card_ingredients .title{
+.recipes .ingredients .title{
     display: grid;
     grid-template-columns: 0.245fr 1.245fr;
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
-.recipes .card_preparation .title{
+.recipes .preparation .title{
     display: grid;
     grid-template-columns: 0.55fr 2fr;
     padding-top: 39px;
     padding-bottom: 20px;
 }
 
-.recipes .card_information .title{
+.recipes .information .title{
     display: grid;
     grid-template-columns: 0.80fr 2fr;
     padding-top: 39px;
