--- a/views/layout.njk
+++ b/views/layout.njk
@@ -2,13 +2,13 @@
 <html>
 
     <head>
+        
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="/style.css">
 
         {% block head %}
           <title>Foodfy</title>
         {% endblock %}
-        
     </head>
 
     <body>
@@ -19,8 +19,8 @@
                 </a>
             </div>
             <div class="links">
-                <a class="sobre" href="/sobre">Sobre</a>
-                <a class="receitas" href="/receitas">Receitas</a>
+                <a href="/sobre">Sobre</a>
+                <a href="/receitas">Receitas</a>
             </div>
         </header>
 
@@ -28,7 +28,7 @@
         <div class="footer">
             <p>Todos direitos reservados, receitas Foodfy</p>
         </div>
-        
+        <script src="/scripts.js"></script>
     </body>
 
 </html>
