--- a/views/receitas.njk
+++ b/views/receitas.njk
@@ -8,7 +8,7 @@
         <section class="mais_acessados">
             {% for i in range(0, 2)  -%}
                 {% for item in items %}
-                    <div class="card" id="{{item.title}}">
+                    <div class="card" id="{{loop.index0}}">
                         <div class="card_image-container">
                             <!-- <img src="/burger.png" alt="{{item.title}}"> -->
                             <img src="{{item.image}}" alt="{{item.title}}">
@@ -42,7 +42,6 @@
             </div>
         </div>
         
-<script src="scripts.js"></script>
 {% endblock %}
 
 
