bug: Correção do Footer para o final da pagina dinamicamente

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -26,7 +26,9 @@
 
         {% block content %} {% endblock %}
         <div class="footer">
-            <p>Todos direitos reservados, receitas Foodfy</p>
+            <footer>
+                <p>Todos direitos reservados, receitas Foodfy</p>
+            </footer>
         </div>
         <script src="/scripts.js"></script>
     </body>
