--- a/public/style.css
+++ b/public/style.css
@@ -6,10 +6,21 @@
     border: 0;
 }
 
+/* Para o footer se ajustar ao final da página,
+você vai precisar deixar o elemento pai, 
+nesse caso o body, como display:flex; 
+e fazer o ajuste de altura, nesse caso, 
+coloquei toda a altura do viewport. */
+
 body{
     background: white;
     font-family: 'Roboto', sans-serif;
     color: black;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;/* fazer o flex ficar 
+    em coluna e não em linha */
 }
 
 header{
@@ -125,23 +136,47 @@ header{
 }
 
 /* ===================== FOOTER ======================== */
-
+/*
 .footer{
     margin-top: 50px;
-    /*margin-top: auto;
-    width: 100%;*/
+    //margin-top: auto;
+    //width: 100%;
     height: 62px;
     background-color: #eeeeee;
     font-size: 14px;
     color: #999999;
     text-align: center;
+   position: fixed;
+   bottom:0;
+   left:0;
 }
+*/
+/*
 .footer p {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
+*/
 
+.footer {
+    margin-top: 50px;
+    display: flex;
+    flex: 1;    /* faz com que a div se expanda em todo altura restante */
+    width: 100%;
+    align-items: flex-end;  /* alinha o footer lá em baixo */
+
+}
+
+footer {
+    padding: 23px 0;
+    background-color: #eeeeee;
+    width: 100%;
+}
+
+footer p{
+    text-align: center;
+}
 
 /* ===================== SOBRE ======================== */
 
