--- a/public/style.css
+++ b/public/style.css
@@ -563,3 +563,122 @@ body{
 .admin_content_accordion p {
     margin-bottom: 51px;
 }
+/* === CARD === */
+
+.card_recipe {
+    background-color: white;
+    width: 800px;
+    /*height: 400px;*/
+    min-height: 400px;
+
+    /* Espaçamento ao centro*/
+    margin: 45px auto;
+
+    /* Grid dividido ao meio*/
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    /* Sombra */
+    box-shadow: 0px 2px 6px -2px rgba(0, 0, 0, 0.4);
+
+    /* Animation */
+    animation: up 200ms ease-out;
+}
+
+@keyframes up {
+    from{
+        opacity: 0;
+        transform: translateY(15px);
+    }
+    to{
+        opacity: 1;
+    }
+}
+/* ========  Details   =========== */
+.details{
+    padding: 32px;
+}
+
+.details .item{
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    padding:16px 0;
+
+}
+
+.details .item:last-child{
+    border: none;
+}
+.details h3,
+.details .item div:nth-child(1){
+    font-size: 14px;
+    line-height: 24px;
+    color: #777;
+    letter-spacing:0.7px;
+    font-weight: normal;
+}
+.details .item div:nth-child(2){
+    color: #555;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.details h3{
+    text-transform: uppercase;
+    font-weight: bold;
+    color: var(--primary-color);
+}
+
+.details .item span{
+    padding: 8px 16px;
+    background-color: var(--secondary-color);
+    border-radius:16px;
+    color: #777;
+    margin-right: 4px;
+    margin-top: 8px;
+    display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+/* ========  Form  =========== */
+
+input, select {
+    width: 100%;
+    outline: none;
+    color: #555;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+input[type="radio"]{
+    width: initial;
+    margin-right: 4px;
+}
+
+input::placeholder{
+    font-size: 16px;
+    font-weight: normal;
+}
+
+button[type="submit"],
+a.button{
+    padding: 8px 32px;
+    background-color: lightcoral;
+    color: white;
+    border-radius: 4px;
+    margin-top: 32px;
+    width: 100%;
+    font-size: 16px;
+}
+a.button {
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+}
+
+#form-delete button[type="submit"] {
+    margin-top: 8px;
+    background-color: lightcoral;
+}
