--- a/views/admin/edit.njk
+++ b/views/admin/edit.njk
@@ -3,16 +3,24 @@
 {% block content %}
   <div class="card_recipe">
     <section class="details">
-      	<form action="POST" action="/">
-        <h3>Editar</h3>
-        {% include "admin/fields.njk" %}
-        <input type="hidden" name="" value="{{recipe.id}}"/>
+      <div class="forms-actions">
+        <form action="POST" action="/">
+          <div class="title-content">
+            <h3>Editando Receita</h3>
+            <button type="submit" class="save">Salvar receita</button>
+          </div>
+  
+          {% include "admin/fields.njk" %}
+        
+          <input type="hidden" name="" value="{{recipe.id}}"/>
         </form>
+        
         <form id="form-delete" action="/members?_method=DELETE" method="post">
           <input type="hidden" name="id" value="{{ recipe.id }}">
-          <button type="submit">Deletar</button>
+          <button class="delete" type="submit">Deletar</button>
         </form>
-    </section>
+      </div> 
+    </section>	
   </div>
 
 
