--- a/public/style.css
+++ b/public/style.css
@@ -617,7 +617,7 @@ header{
     letter-spacing:0.7px;
     font-weight: bold;
 
-    padding: 30px 0;
+    padding-top: 30px;
 }
 
 .details .item div:nth-child(1){
@@ -735,5 +735,14 @@ a.button {
     width: 92px;
     right: 150px;
     
+}
+
+.add-ingredient, .add-preparation{
+    color: #6558C3;
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: right;
+    padding-top: 15px;
 }
 
