--- a/views/admin/edit.njk
+++ b/views/admin/edit.njk
@@ -22,7 +22,5 @@
       </div> 
     </section>	
   </div>
-
-
-<script src="scripts.js"></script>
+<script src="/scripts.js"></script>
 {% endblock %}
