chore: Implementing the new recipe creation page

--- a/public/style.css
+++ b/public/style.css
@@ -367,6 +367,7 @@ header{
     display: initial;
     grid-template-columns: 0;
     background-color: #111111;
+    height: auto;
 }
 
 .admin_logo{
