--- a/views/admin/recipe.njk
+++ b/views/admin/recipe.njk
@@ -10,7 +10,7 @@
     <div class="admin_recipe" id="{{loop.index0}}">
       <div class="admin_recipe_title">
         <p>Receita: {{item.title}}</p>
-        <a href="/">Editar Receita</a>
+        <a href="/admin/recipes/{{id}}/edit">Editar Receita</a>
       </div>
 
       <div class="admin_image-container">
